--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Add patterns in here to exclude files created by tools integrated with this
+# repository, such as test frameworks from the project's recommended workflow,
+# rendered documentation and package builds.
+#
+# Don't add patterns to exclude files created by preferred personal tools
+# (editors, IDEs, your operating system itself even). These should instead be
+# maintained outside the repository, for example in a ~/.gitignore file added
+# with:
+#
+# git config --global core.excludesfile '~/.gitignore'
+
+# Bytecompiled Python
+
 *.py[cod]
 
 # Packages
@@ -19,18 +32,9 @@ pip-log.txt
 nosetests.xml
 .testrepository
 
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
 # Sphinx
 doc/build
 
 # pbr generates these
 AUTHORS
 ChangeLog
-
-# Editors
-*~
-.*.swp
